create github pages

--- a/page3.html
+++ b/page3.html
@@ -81,13 +81,13 @@
             <div class="col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-1">Impressum</h4>
-                <p class="mbr-text mbr-fonts-style display-7"></p><h1><span style="font-size: 2rem;">Diensteanbieter</span><br></h1>
+                <h2><span style="font-size: 2rem;">Diensteanbieter</span><br></h2>
 <br><p>Jan Lukas Lindner</p>
 <br><p>Friedrichstr. 37</p>
 <br><p>72793 Pfullingen</p>
 <br><p>Germany</p>
-<br><h2>Kontaktmöglichkeiten</h2>E-Mail-Adresse: <p><a href="mailto:jlfilmundfoto@gmail.com">jlfilmundfoto@gmail.com</a></p>
-<br>Telefon: <p>0049 177 797 5</p>
+<br><h2>Kontaktmöglichkeiten</h2><p><br>E-Mail-Adresse: <a href="mailto:jlfilmundfoto@gmail.com">jlfilmundfoto@gmail.com</a></p>
+<br><p>Telefon: <a href="tel:0049177797">0049 177 797 5</a></p>
 <br><h2>Audiovisuelle Mediendienste</h2><p>Sitzland: Deutschland</p>
 <br><p>Zuständige Regulierungs-, bzw. Aufsichtsbehörde: Landesanstalt für Kommunikation Baden-Württemberg (LFK), <a href="https://www.lfk.de/" target="_blank">https://www.lfk.de/</a></p>
 <br><h2>Angaben zum Unternehmen</h2><h2>Haftungs- und Schutzrechtshinweise</h2><p>Haftungsausschluss: Die Inhalte dieses Onlineangebotes wurden sorgfältig und nach unserem aktuellen Kenntnisstand erstellt, dienen jedoch nur der Information und entfalten keine rechtlich bindende Wirkung, sofern es sich nicht um gesetzlich verpflichtende Informationen (z.B. das Impressum, die Datenschutzerklärung, AGB oder verpflichtende Belehrungen von Verbrauchern) handelt. Wir behalten uns vor, die Inhalte vollständig oder teilweise zu ändern oder zu löschen, soweit vertragliche Verpflichtungen unberührt bleiben. Alle Angebote sind freibleibend und unverbindlich. </p>
@@ -95,7 +95,7 @@
 <br><p>Urheberrechte und Markenrechte: Alle auf dieser Website dargestellten Inhalte, wie Texte, Fotografien, Grafiken, Marken und Warenzeichen sind durch die jeweiligen Schutzrechte (Urheberrechte, Markenrechte) geschützt. Die Verwendung, Vervielfältigung usw. unterliegen unseren Rechten oder den Rechten der jeweiligen Urheber bzw. Rechteinhaber.</p>
 <br><p>Hinweise auf Rechtsverstöße: Sollten Sie innerhalb unseres Internetauftritts Rechtsverstöße bemerken, bitten wir Sie uns auf diese hinzuweisen. Wir werden rechtswidrige Inhalte und Links nach Kenntnisnahme unverzüglich entfernen.</p>
 <br><h2>Bildnachweise</h2>Bildquellen und Urheberrechtshinweise: <p>Fotograf für alle Bilder (ausgenommen hiervon sind Symbole von z.B. Sozialen Medien) auf dieser Website: Jan Lukas Lindner</p>
-<br><p class="seal"><a href="https://datenschutz-generator.de/" title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken." target="_blank" rel="noopener noreferrer nofollow">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke</a></p><p></p>
+<br><p class="seal"><a href="https://datenschutz-generator.de/" title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken." target="_blank" rel="noopener noreferrer nofollow">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke</a></p>
             </div>
         </div>
     </div>
