create github pages

--- a/page6.html
+++ b/page6.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Datenschutz">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favorit-wei-aufschwarz-140x140.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -38,7 +38,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" alt="Mobirise Website Builder" style="height: 3rem;">
+                        <img src="assets/images/favorit-wei-aufschwarz-140x140.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
