--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Contact">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/favorit-wei-aufschwarz-140x140.png" type="image/x-icon">
   <meta name="description" content="Ich bin ambitionierter Hobbyfotograf und -Filmemacher aus Pfullingen bei Stuttgart und stehe Ihnen für Ihre Feieren und Projekte gerne zur Verfügung. Kontaktieren Sie mich einfach über das Kontaktformular!">
   
   
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" alt="Mobirise Website Builder" style="height: 3rem;">
+                        <img src="assets/images/favorit-wei-aufschwarz-140x140.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-7" href="home.html">JL Film &amp; Foto</a></span>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=72793 Pfullingen, Germany" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
         </div>
     </div>
